--- a/TeachVideoGame/FrontEnd/stylesheets/habilidades.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/habilidades.css
@@ -9,58 +9,29 @@
   opacity: 0.8;
   z-index: 10;
 
-  .imagenPersonaje {
-    width: 100px;
-    height: 100px;
-    opacity: 0.8;
-    /* border: 1px solid black; */
-
-    img {
-      width: 100%;
-    }
-  }
-
+  
   .habilidades {
     display: flex;
     margin: 10px;
     /* border: 1px solid black; */
   }
-
-  .stats {
-    width: 80%;
-    /* border: 1px solid rgb(49, 134, 213); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    margin-top: 15px;
-  }
-
+  
+  
+  
   button {
     position: relative;
     width: 80px;
     height: 80px;
     border: 2px solid black;
-    border-image: linear-gradient(
-        45deg,
-        rgb(0, 0, 0),
-        rgb(255, 255, 255),
-        rgb(0, 0, 0),
-        rgb(255, 255, 255)
-      )
-      1;
-    background: #043247;
-    color: white;
-    font-size: 15px;
     margin: 8px;
-    animation: rotate-border 1s linear infinite; /* Aplica la animación */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden; */
+    color: white;
 
     img {
-      width: 95%;
+      width: 100%;
+      height: 100%;
     }
 
     &:hover {
@@ -72,10 +43,10 @@
 
   .boton_activo {
     background: #09586b;
-    /* overflow: hidden; */
     cursor: pointer;
-    box-shadow: 1px 1px 4px 8px rgba(245, 255, 110, 0.79);
-    border: none;
+    border-image: linear-gradient( 45deg,rgb(0, 0, 0),rgb(255, 255, 255), rgb(0, 0, 0),rgb(255, 255, 255))1;
+    animation: rotate-border 1s linear infinite; /* Aplica la animación */
+    box-shadow: 1px 1px 4px 4px rgba(245, 255, 110, 0.79);
   }
 }
 
@@ -87,14 +58,7 @@
   right: 0px;
 }
 
-.imagen_cooldown {
-  width: 100%;
-  position: absolute;
-  z-index: 10;
-  top: -70px;
-  left: 0;
-  filter: blur(1.2px);
-}
+
 
 .cooldown {
   position: absolute;
@@ -120,12 +84,12 @@
 }
 
 .descripcionHabilidades {
-  width: 60%;
+  width: 70%;
   height: 120px;
   border: 1px solid black;
   position: absolute;
   top: -110px;
-  background: rgba(0, 0, 0, 0.514);
+  background: rgba(0, 0, 0, 0.616);
   padding: 10px;
   font-weight: bold;
   display: flex;
@@ -148,7 +112,7 @@
 }
 
 .descripcion_poder {
-  font-size: 12px;
+  font-size: 16px;
   color: rgb(218, 227, 150);
   text-align: center;
 }
