--- a/TeachVideoGame/FrontEnd/stylesheets/index.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/index.css
@@ -100,67 +100,6 @@ body {
   }
 }
 
-/* Seccion condiciones  */
-.seccionCondicion {
-  position: absolute;
-  width: auto;
-  height: 30px;
-  padding: 2px;
-
-  display: flex;
-  justify-content: flex-end; /* Asegurar que los elementos se alineen al final */
-  align-items: flex-end;
-  /* transform-origin: right; */
-}
-
-.condicion {
-  margin: 5px 10px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-
-  p {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: -28px;
-    font-size: 12px;
-    color: rgb(199, 226, 78);
-    /* border: 1px solid rgb(255, 255, 255); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    /* background: rgba(0, 0, 0, 0.443); */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.544);
-    border-radius: 50%;
-  }
-}
-
-.condicionNegativas {
-  background: rgba(242, 0, 0, 0.502);
-  width: auto;
-  height: 30px;
-  border: 1px solid rgb(123, 19, 19);
-  position: relative;
-  left: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.condicionPositivas {
-  background: rgba(0, 141, 242, 0.604);
-  width: auto;
-  height: 30px;
-  border: 1px solid rgba(4, 77, 129, 0.502);
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 /* Ubicacion Personbajesa */
 .ubicacionPersonajePrincipal {
@@ -185,45 +124,51 @@ body {
   position: absolute;
 }
 
+.seccionDebufQuemadura {
+  position: absolute;
+  width: 100px;
+  height: 100px;
 
+  opacity: 0.8;
 
-.seccionDebufFuego{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    
-    opacity: 0.8;
-    
-    
-    img{
-      width: 100%;
-    }
+  img {
+    width: 100%;
+  }
+}
 
+.seccionDebufVeneno {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  opacity: 0.8;
 
+  img {
+    width: 100%;
+  }
+}
+
+.seccionTurno {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  opacity: 0.8;
+
+  img {
+    width: 100%;
+  }
 }
 
 
-.seccionDebufVeneno{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    opacity: 0.8;
-    
-
-    img{
-        width: 100%;
-    }
-}
 
 
-.seccionDebufCaravela{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    opacity: 0.8;
-    
 
-    img{
-        width: 100%;
-    }
-}
+
+
+
+
+
+
+/* 
+
+
+*/
