--- a/TeachVideoGame/FrontEnd/stylesheets/index.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/index.css
@@ -151,7 +151,8 @@ body {
   position: absolute;
   width: 100px;
   height: 100px;
-  opacity: 0.8;
+  z-index: 200;
+  /* opacity: 0.8; */
 
   img {
     width: 100%;
@@ -162,13 +163,3 @@ body {
 
 
 
-
-
-
-
-
-
-/* 
-
-
-*/
