--- a/TeachVideoGame/FrontEnd/stylesheets/daño.css
+++ b/TeachVideoGame/FrontEnd/stylesheets/daño.css
@@ -37,16 +37,13 @@
     height: 80px;
     position: absolute;
     z-index: 200;
-    /* border: 1px solid #545454; */
-    /* background: rgba(94, 94, 94, 0.7); */
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 36px;
-    color: #ff4d4d; /* Bright color for visibility */
     font-weight: bold;
 
-    /*$ tiewmpo importante de match  */
+    /*$ tiempo importante de match  */
     animation: aparicionDaño 0.5s ease-out forwards;
 }
 
@@ -82,4 +79,45 @@
     color: rgb(176, 62, 186);    
     
     
+}
+
+
+
+
+/* Indicador de turno */
+.seccionTurnoCirculo {
+    width: 100px;
+    height: 50px;
+    background: radial-gradient(ellipse at center, rgba(8, 191, 242, 0.8), rgba(9, 189, 255, 0.235) 80%);
+    border-radius: 50%;
+    position: absolute;
+    animation: turnoRPGImpactante 2s  linear infinite;
+}
+
+@keyframes turnoRPGImpactante {
+    0% {
+        transform: scale(1.1);
+        box-shadow: 0 0 5px rgba(9, 202, 51, 0.811), 0 0 20px rgba(8, 191, 242, 0.4);
+        /* filter: brightness(1); */
+    }
+    25% {
+        transform: scale(1.2);
+        box-shadow: 0 0 5px rgba(12, 193, 36, 0.9), 0 0 25px rgba(8, 191, 242, 0.6);
+        /* filter: brightness(1.2); */
+    }
+    50% {
+        transform: scale(1.1);
+        box-shadow: 0 0 5px rgba(12, 193, 18, 0.852), 0 0 20px rgba(8, 149, 237, 0.4);
+        /* filter: brightness(1); */
+    }
+    75% {
+        transform: scale(1.2);
+        box-shadow: 0 0 5px rgba(12, 193, 39, 0.667), 0 0 25px rgba(8, 191, 242, 0.3);
+        /* filter: brightness(0.8); */
+    }
+    100% {
+        transform: scale(1.1);
+        box-shadow: 0 0px 5px rgba(15, 193, 12, 0.7), 0 0 30px rgba(4, 131, 169, 0.4);
+        /* filter: brightness(1); */
+    }
 }
